[package]
name = "pstreew"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
windows = { version = "0.51.1", features = [
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_Foundation",
  ] }


